[package]
name = "jtrace"
version = "0.1.0"
authors = ["Bartosz Wojcik <bartwojc@gmail.com>"]
description = "A set of simple tools for dynamic analysis of program control flow."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bartwojcik/jtrace"
keywords = ["analysis", "binary", "control", "dynamic", "flow"]
edition = "2018"
default-run = "jtrace"

[dependencies]
ahash = "0.3.2"
bincode = "1.2.1"
capstone = "0.6.0"
clap = "2.33.0"
crossbeam = "0.7.3"
env_logger = "0.7.1"
libc = "0.2.66"
log = "0.4.8"
nix = "0.17.0"
proc-maps = "0.1.6"
rand = "0.7.3"
serde = { version = "1.0.104", features = ["derive"] }
spsc-bip-buffer = "0.2.1"
structopt = "0.3.9"
xmas-elf = "0.7.0"
zerocopy = "0.2.8"